--- a/app/src/main/res/layout/activity_sensing.xml
+++ b/app/src/main/res/layout/activity_sensing.xml
@@ -26,4 +26,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/text_view_direction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="方位"
+        app:layout_constraintBottom_toTopOf="@+id/back_button"
+        app:layout_constraintEnd_toEndOf="@+id/back_button"
+        app:layout_constraintStart_toStartOf="@+id/back_button" />
 </androidx.constraintlayout.widget.ConstraintLayout>
